--- a/Animate_Diff.ipynb
+++ b/Animate_Diff.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "A100"
+      "gpuType": "A100",
+      "authorship_tag": "ABX9TyMpK5bZW4pkKL/uIbN1ze3T",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +19,16 @@
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Reekomer/AnimateDiff-colab/blob/main/Animate_Diff.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
